@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>name</key>
+	<string>Unused Variables</string>
+	<key>scope</key>
+	<string>source.js - source.js.embedded.html</string>
+	<key>settings</key>
+	<dict>
+		<key>shellVariables</key>
+		<array>
+			<dict>
+				<key>name</key>
+				<string>TM_JSLINTMATE_WARN_ABOUT_UNUSED_VARIABLES</string>
+				<key>value</key>
+				<string>true</string>
+			</dict>
+		</array>
+	</dict>
+	<key>uuid</key>
+	<string>EB81D9B6-A57F-43E5-91F5-652A64CC509C</string>
+</dict>
+</plist>
