@@ -34,6 +34,7 @@
 		<string>8682E071-F767-4923-9367-E6BCF1D239DF</string>
 		<string>7CC51431-5469-4649-9A05-F4F816EA5DB7</string>
 		<string>2165A6D4-37D8-4E88-AF69-814085329782</string>
+		<string>EB81D9B6-A57F-43E5-91F5-652A64CC509C</string>
 	</array>
 	<key>uuid</key>
 	<string>E83757B9-C672-4F56-A7EB-B50525448B07</string>
